5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4271/executions/1745_1521.log
== TEST (2019-05-15 15:29:55) 
-- CODE:
c = int(input("capacidade n: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade q: "))

soma = 0
semanas = 0
while (C<semanas)
	c = e * 7 + q
	cont = cont + 1
	print(semanas)
	


-- ERROR:
File "XXXX", line 7
    while (C<semanas)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 15:30:30) 
-- CODE:
c = int(input("capacidade n: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade q: "))

soma = 0
semanas = 0
while (C<7)
	c = e * 7 + q
	cont = cont + 1
	print(semanas)
	


-- ERROR:
File "XXXX", line 7
    while (C<7)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 15:30:58) 
-- CODE:
c = int(input("capacidade n: "))
e = int(input("estoque inicial: "))
q = int(input("quantidade q: "))

soma = 0
semanas = 0
while (C)
	c = e * 7 + q
	cont = cont + 1
	print(semanas)
	


-- EXECUTION TIME:
0.132441
-- ERROR:
  File "/home/codebench/codes/1745/1521/main.py", line 7
    while (C)
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
